syntax = "proto3";

option go_package = "github.com/hi20160616/Go-000/Week04/helloworld/api/helloworld/v1";

package helloworld;

service Greeter{
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  // Sends another greeting
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
